Sale page updated

--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
       
         <!-- Testimonial 1 -->
       <div style="flex: 0 0 300px; scroll-snap-align: start; background: white; padding: 25px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-        <img src="images/testimonial-1.jpg" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #6e48aa; margin: 0 auto 15px;">
+        <img src="images/user/testify1.jpg" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #6e48aa; margin: 0 auto 15px;">
         <p style="font-style: italic;">"I was making $9/hour at Starbucks. 14 days after buying this, I made $1,143. My manager's face when I quit? Priceless."</p>
         <p style="font-weight: bold;">— Jason T. (First $1K in 16 Days)</p>
         <div style="display: flex; justify-content: center; margin-top: 15px;">
@@ -809,9 +809,9 @@
 
        <!-- Testimonial 2 -->
        <div style="flex: 0 0 300px; scroll-snap-align: start; background: white; padding: 25px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-        <img src="images/testimonial-1.jpg" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #6e48aa; margin: 0 auto 15px;">
-        <p style="font-style: italic;">"I was making $9/hour at Starbucks. 14 days after buying this, I made $1,143. My manager's face when I quit? Priceless."</p>
-        <p style="font-weight: bold;">— Jason T. (First $1K in 16 Days)</p>
+        <img src="images/user/testify2.jpg" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #6e48aa; margin: 0 auto 15px;">
+        <p style="font-style: italic;">"As a divorced mom of two, I was drowning in daycare costs. This system helped me make $847 in my first week - enough to quit my night shift at Walmart! Now I work 2 hours/day while my kids nap and just paid off my credit cards."</p>
+        <p style="font-weight: bold;">— Michelle R. (Single Mom, 34)</p>
         <div style="display: flex; justify-content: center; margin-top: 15px;">
           <span style="background: gold; padding: 3px 10px; border-radius: 20px; font-size: 0.8em; font-weight: bold;">TOP PERFORMER</span>
         </div>
@@ -819,9 +819,9 @@
 
        <!-- Testimonial 3 -->
        <div style="flex: 0 0 300px; scroll-snap-align: start; background: white; padding: 25px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-        <img src="images/testimonial-1.jpg" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #6e48aa; margin: 0 auto 15px;">
-        <p style="font-style: italic;">"I was making $9/hour at Starbucks. 14 days after buying this, I made $1,143. My manager's face when I quit? Priceless."</p>
-        <p style="font-weight: bold;">— Jason T. (First $1K in 16 Days)</p>
+        <img src="images/user/testify3.jpg" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #6e48aa; margin: 0 auto 15px;">
+        <p style="font-style: italic;">"Bought this instead of textbooks last semester. Profits paid my tuition AND a spring break trip to Cancun. Roommates thought I was dealing drugs until I showed them the dashboard!"</p>
+        <p style="font-weight: bold;">— Alicia S. (College Sophomore)</p>
         <div style="display: flex; justify-content: center; margin-top: 15px;">
           <span style="background: gold; padding: 3px 10px; border-radius: 20px; font-size: 0.8em; font-weight: bold;">TOP PERFORMER</span>
         </div>
