Streamable code apply directly

--- a/index.html
+++ b/index.html
@@ -277,36 +277,7 @@
 
         <!-- ======= ULTIMATE VIDEO HERO SECTION ======= -->
 
-    <div class="video-header" style="text-align:center;">
-  <iframe 
-    src="https://streamable.com/e/9ivxl4" 
-    width="640" 
-    height="360" 
-    frameborder="0" 
-    allowfullscreen 
-    allow="autoplay; encrypted-media"
-    loading="lazy">
-  </iframe>
-
-  <div class="video-fallback" style="display:none; margin-top:10px;">
-    <p>Video not loading? <a href="https://streamable.com/9ivx14" target="_blank">Click here to watch it directly.</a></p>
-  </div>
-</div>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const iframe = document.querySelector('.video-header iframe');
-    const fallback = document.querySelector('.video-fallback');
-
-    // Show fallback if iframe doesn't load after a delay
-    const timeout = setTimeout(() => {
-      if (!iframe || iframe.offsetHeight === 0) {
-        fallback.style.display = 'block';
-      }
-    }, 3000); // 3 seconds timeout for loading iframe
-  });
-</script>
-    
+    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/9ivxl4?" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
 
         
         <!-- Bonuses Section -->
