--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               ⏳ <span id="sticky-minutes">05</span>:<span id="sticky-seconds">00</span> LEFT AT $27!
             </div>
             <a href="https://warriorplus.com/o2/buy/dqnvwc/jhwnmx/lflkjq" style="background: white; color: #ff4757; padding: 10px 20px; border-radius: 50px; font-weight: bold; text-decoration: none;">
-                Hurry! Use Coupon Code: TOTLESOFT-MM</a>
+                Hurry! Use Code: TOTLESOFT-MM</a>
           </div>
           
           <script>
@@ -277,7 +277,7 @@
 
         <!-- ======= ULTIMATE VIDEO HERO SECTION ======= -->
 
-    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/9ivxl4?" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
+    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/sacfy3?" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
 
         
         <!-- Bonuses Section -->
