New script with extra bugs removed

--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-# Updated Sales Page with Video Embed and Adjusted Claims
 
-Here's your revised sales page with:
-1. Your Streamable video embedded properly
-2. All "proven claims" adjusted to comply with WarriorPlus requirements
-3. Stronger, compliant language that still converts
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/user/favicon-32x32.png" type="image/png" sizes="32x32">
-    <title>$1000/Month Money Machine System | Limited $27 Offer</title>
+    <title>$1000+/Month Money Machine System | Limited $27 Offer</title>
     <style>
         /* === CORE STYLES === */
         body {
@@ -208,7 +201,7 @@ Here's your revised sales page with:
               ⏳ <span id="sticky-minutes">05</span>:<span id="sticky-seconds">00</span> LEFT AT $27!
             </div>
             <a href="https://warriorplus.com/o2/buy/dqnvwc/jhwnmx/lflkjq" style="background: white; color: #ff4757; padding: 10px 20px; border-radius: 50px; font-weight: bold; text-decoration: none;">
-                Hurry! Use Coupon Code: TOTLESOFT-MM</a>
+                Hurry! Use Code: TOTLESOFT-MM</a>
           </div>
           
           <script>
