Warrior plus disclaimer added

--- a/index.html
+++ b/index.html
@@ -709,11 +709,33 @@
   }
 </style>
 
-<div style="text-align: center; padding: 20px;">
-  <a href="https://warriorplus.com/o2/buy/dqnvwc/jhwnmx/lflkjq" class="wpb-button">
-    <img src="https://warriorplus.com/o2/btn/cn200011001/dqnvwc/jhwnmx/430426" style="max-width: 100%;">
-  </a>
-</div>
+<!-- 👣 PROFESSIONAL FOOTER -->
+<footer style="background: #013b26; color: white; padding: 30px 20px; text-align: center; margin-top: 50px;">
+    <div style="max-width: 800px; margin: 0 auto;">
+        <img src="images/user/moneyback.png" alt="Money Back Guarantee" style="max-width: 200px; margin-bottom: 20px;">
+        <p>© Totlesoft. All Rights Reserved.</p>
+        <p style="font-size: 14px; opacity: 0.8; margin-top: 20px;">
+            <a href="https://docs.google.com/document/d/1AyhHRbKN48HgxU4q9kDizJXcXeU0CsqeEblrF7ar64s/edit?usp=sharing" style="color: #fff; text-decoration: underline;">Terms and Condition</a> | 
+            <a href="https://docs.google.com/document/d/17eyY10wmZIUGjdw0Xlli-nkNXN_zCgg6_5_uW-2_D0k/edit?usp=sharing" style="color: #fff; text-decoration: underline;">Privacy Policy</a> |
+            <a href="https://wa.me/447418375846" style="color: #fff; text-decoration: underline;">Contact Us</a> 
+        </p>
+
+
+        
+        <div class="wplus_spdisclaimer" style="color: #fff; font-size: 14px; padding: 15px 0;"></div>
+
+
+        <p style="font-size: 12px; margin-top: 20px;">
+            Disclaimer: Results not typical. Your success depends on taking action. This is not a "get rich quick" scheme. <br/>
+            This website in no way is affiliated with facebook or youtube entities. Once you leave facebook the responsibility no longer is on their site. We make every attempt to clearly state and show all proof. We do not sell your email or any information. CAN-SPAM compliant. If you have any questions please feel free to contact us here. All trademarks and logos are the property of their respective owners. 
+
+            This site and the products and services offered on this site are not associated, affiliated, endorsed, or sponsored by any business listed on this page nor have they been reviewed tested or certified by any other company listed on this page. The results shown are not typical and results will vary based on your market, your efforts, competition and many other factors outside of our control. 
+
+            The conditional guarantee is not a promise of payout whatsoever. It's merely there to show you that we're confident about  what we're offering. To qualify for the conditional guarantee you must show clear cut evidence that you've done the work and asked for help and we weren't able to solve the problem.
+        </p>
+    </div>
+</footer>
+  
         
     </div> <!-- Closes the .container div -->
 
