Money claim removed

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="header">
             <div class="discount-badge">FIRST 100: $27 ONLY!</div>
             <h1>The $1000+ Per Month Money Machine</h1>
-            <h2>Turn Spare Time Into $32-$100 Daily With This "Set-Once & Forget" System</h2>
+            <h2>A Simple ‘Set-Once & Forget’ System for Online Earnings</h2>
         </div>
         
         <!-- Video Section -->
